# Vision-por-computador

Parcial2/: CMakeLists.txt  main.cpp
Parcial2/Debug/: CMakeCache.txt  Makefile  Parcial2  Parcial2.cbp  cmake_install.cmake
taller1/: CMakeLists.txt  main.cpp
taller1/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  taller1  taller1.cbp
taller2/: CMakeLists.txt  main.cpp
taller2/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  taller2  taller2.cbp
taller3/: CMakeLists.txt  main.cpp
taller3/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  taller3  taller3.cbp
taller4/: CMakeLists.txt  main.cpp
taller4/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  taller4  taller4.cbp
